@@ -155,7 +155,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.1121 $"))
+    (let ((rev "$Revision: 1.1122 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 1030))
 	   (concat "1.4.0" (if (>= rev 0) (format ".%d" (+ rev 50)) "")))))
@@ -6470,7 +6470,6 @@ as if the folder command of MH performs with the -pack option."
     (define-key map "+" 'w3m-antenna-add-current-url)
     (define-key map "A" 'w3m-antenna)
     (define-key map "b" 'w3m-scroll-down-or-previous-url)
-    (define-key map "c" 'w3m-print-this-url)
     (define-key map "!" 'w3m-redisplay-with-content-type)
     (define-key map "d" 'w3m-download)
     (define-key map "D" 'w3m-download-this-url)
@@ -6522,7 +6521,8 @@ as if the folder command of MH performs with the -pack option."
     (define-key map "u" 'w3m-view-parent-page)
     (define-key map "v" 'w3m-bookmark-view)
     (define-key map "W" 'w3m-weather)
-    (define-key map "y" 'w3m-print-this-url)
+    (define-key map "y" 'w3m-print-current-url)
+    (define-key map "Y" 'w3m-print-this-url)
     (define-key map "=" 'w3m-view-header)
     (define-key map "\\" 'w3m-view-source)
     (define-key map "?" 'describe-mode)
