@@ -1,5 +1,9 @@
 2005-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* w3m.el (w3m-info-like-map): Bind the `y' key to the
+	w3m-print-current-url command; bind the `Y' key to the
+	w3m-print-this-url key; don't bind the `c' key.
+
 	* shimbun/sb-impress.el (shimbun-make-contents): Fix broken image
 	tags.
 
